* Put some padding around the strapline text to stop it from looking       so cramped in its blue box.

--- a/www/style/g4-screen.css
+++ b/www/style/g4-screen.css
@@ -118,8 +118,7 @@ input, textarea, select {
 	background-color: #004183;
 	color: white;
 	margin-bottom: 0.1ex;
-	padding: 0.2ex;
-	padding-bottom: 0.1ex;
+	padding: 5px;
 }
 
 .superHeader span {
